# puzzhagoras_solver

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  both-pieces.json  green-pieces.json  yellow-pieces.json
.github/workflows/: build.yml
app/: Cargo.toml  green-pieces.json
app/src/: gui.rs  main.rs  piece.rs  puzzle.rs  solver.rs
assets/: green_pieces.piskel  puzzhagoras_icon.piskel  yellow_pieces.piskel
macros/: Cargo.toml
macros/src/: lib.rs
src/: gui.rs  main.rs  piece.rs  puzzle.rs  solver.rs
