[package]
name = "puzzhagoras_solver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image"] }
puzzhagoras_solver_macros = { path = "../macros" }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
