[package]
name = "puzzhagoras_solver"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = ["image"] }
puzzhagoras_solver_macros = { path = "../macros" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
